Partially cooked & cooked vanilla meat can be charred in the firepit - DONE!!!
Pitch glue recipe fixed	- DONE!!!
Soy milk can be added to porridge - DONE!!!
GroundStack property used internally instead of GrindedStack - DONE!!!
Gelatin stack increased from 16 to 32 - DONE!!!
Egg yolk can be used to make pasta - DONE!!!
Added simmer recipe to rehydrate hardened lard - DONE!!!
Pressed mash trough texture fixed

Vanilla fish can be used in EF stuff; broth, boiling, meals - DONE!!!
Vanilla fish have part-baked & cooked states, can be baked, used in pies - DONE!!!
Vanilla fish can be smashed and cut into fish nuggets - DONE!!!
Fish nuggets, fish sausage, fish sauce, fish pemmican, fish gelatin, fried fish, non-vegetarian sushi, & seafood broth now vanilla items - DONE!!!
Fish nuggets buffed to vanilla fish nutrition; has cured variants; requires more PS filets to make - DONE!!!
Fish nugget models & textures changed to look more vanilla - DONE!!!
Raw fish & fish nuggets can be used to make fish sauce - DONE!!!
Raw fish nuggets & smashed fish are now edible - DONE!!!
Fish sausage textures updated - DONE!!!

Cured meat nuggets can be used in trail mix - DONE!!!
meatystew patch cleaned up

Russian translation updated (thanks to vulpeep) - DONE!!!
Mod dependency updated to ACA 1.1.3 - DONE!!!

1.6.8

Added fruit bars - nuts + fruit + syrup
Actually added Wildcraft Trees section in handbook
Various log warnings fixed
Wildcraft fine wine can be distilled into wildcraft brandy
Wildcraft/Wildcraft Trees brandies renamed properly
Gozinaki/trail mix recipes only need 2 handfuls of acorns, not 3
Soulstorm brew has correct text in bottles
Ukranian translation updated (thanks to _epic_fish_ and .olexn)
Polish translation updated (thanks to Sako47)
Many foods can be placed on display case / shelves
Salt production refined (thanks to Goose's Salternate mod)

1.6.7

Updated to NET 7.0
Wildcraft Trees compatibility finally added
Wildcraft compatibility updated
Salt works in meals again