@@ -16,6 +16,7 @@
 		displaycaseable: true,
 		shelvable: true,
 		inContainerTexture: { base: "block/wood/barrel/raw-soybean" },
+		foodTags: ["peanuts"],
 		fertilizerPropsByType: {
 			"*-skins": {
 				n: 20,
