@@ -1,0 +1,65 @@
+﻿[
+  {
+    "op": "add",
+    "path": "/attributes/creatureDiet/foodTags/-",
+    "value": "peanuts",
+    "side": "server",
+    "file": "game:entities/land/chicken-rooster.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/creatureDiet/foodTags/-",
+    "value": "peanuts",
+    "side": "server",
+    "file": "game:entities/land/chicken-hen.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/creatureDiet/foodTags/-",
+    "value": "peanuts",
+    "side": "server",
+    "file": "game:entities/land/chicken-baby.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/creatureDiet/foodTags/-",
+    "value": "peanuts",
+    "side": "server",
+    "file": "game:entities/land/pig-wild-female.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/creatureDiet/foodTags/-",
+    "value": "peanuts",
+    "side": "server",
+    "file": "game:entities/land/pig-wild-male.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/creatureDiet/foodTags/-",
+    "value": "peanuts",
+    "side": "server",
+    "file": "game:entities/land/pig-wild-piglet.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/creatureDiet/foodTags/-",
+    "value": "peanuts",
+    "side": "server",
+    "file": "game:entities/land/raccoon-female.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/creatureDiet/foodTags/-",
+    "value": "peanuts",
+    "side": "server",
+    "file": "game:entities/land/raccoon-male.json"
+  },
+  {
+    "op": "add",
+    "path": "/attributes/creatureDiet/foodTags/-",
+    "value": "peanuts",
+    "side": "server",
+    "file": "game:entities/land/raccoon-pup.json"
+  }
+]
