@@ -63,7 +63,208 @@
     "op": "add",
     "path": "/textures/contents-egg",
     "value": {
-      "base": "block/wood/trough/small/egg"
+      "base": "block/wood/trough/small/egg",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-flax",
+    "value": {
+      "base": "block/food/pie/fill-flax",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-rice",
+    "value": {
+      "base": "block/food/pie/fill-rice",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-sunflower",
+    "value": {
+      "base": "block/food/pie/fill-sunflower",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-seed",
+    "value": {
+      "base": "block/food/pie/fill-seed",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-honey",
+    "value": {
+      "base": "block/food/pie/fill-honey",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-honey",
+    "value": {
+      "base": "block/food/pie/fill-honey",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-soybean",
+    "value": {
+      "base": "block/food/pie/fill-soybean",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-peanut",
+    "value": {
+      "base": "block/food/pie/fill-peanut",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-carrot",
+    "value": {
+      "base": "block/food/pie/fill-carrot",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-cabbage",
+    "value": {
+      "base": "block/food/pie/fill-cabbage",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-onion",
+    "value": {
+      "base": "block/food/pie/fill-onion",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-turnip",
+    "value": {
+      "base": "block/food/pie/fill-turnip",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-parsnip",
+    "value": {
+      "base": "block/food/pie/fill-parsnip",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-pumpkin",
+    "value": {
+      "base": "block/food/pie/fill-pumpkin",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-bellpepper",
+    "value": {
+      "base": "block/food/pie/fill-mixedvegetable",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-cassava",
+    "value": {
+      "base": "block/food/pie/fill-cassava",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-soyslurry",
+    "value": {
+      "base": "block/food/pie/fill-soyslurry",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-soyblend",
+    "value": {
+      "base": "block/food/pie/fill-soyblend",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-olive",
+    "value": {
+      "base": "block/food/pie/fill-olive",
+	  overlays: ["block/wood/trough/large/shadow"]
+    },
+    side: "server",
+    "file": "blocktypes/wood/trough-large.json"
+  },
+  {
+    "op": "add",
+    "path": "/textures/contents-pressedmash-fish",
+    "value": {
+      "base": "block/food/pie/fill-fish",
+	  overlays: ["block/wood/trough/large/shadow"]
     },
     side: "server",
     "file": "blocktypes/wood/trough-large.json"
