@@ -68,7 +68,8 @@ GroundStack property used internally instead of GrindedStack - DONE!!!
 Gelatin stack increased from 16 to 32 - DONE!!!
 Egg yolk can be used to make pasta - DONE!!!
 Added simmer recipe to rehydrate hardened lard - DONE!!!
-Pressed mash trough texture fixed
+Pressed mash trough texture fixed - DONE!!!
+Chickens and raccoons will now eat peanut skins from troughs - DONE!!!
 
 Vanilla fish can be used in EF stuff; broth, boiling, meals - DONE!!!
 Vanilla fish have part-baked & cooked states, can be baked, used in pies - DONE!!!
